no longer explored in advance. The overall session structure with its
declarations of 'directories' is sufficient to locate theory files. Thus
the "session focus" of option "isabelle jedit -S" has become obsolete
(likewise for "isabelle vscode_server -S"). Existing option "-R" is both
sufficient and more convenient to start editing a particular session.


*** HOL ***

* ASCII membership syntax concerning big operators for infimum and
supremum is gone. INCOMPATIBILITY.

* Clear distinction between types for bits (False / True) and Z2 (0 /
1): theory HOL/Library/Bit.thy has been renamed accordingly.
INCOMPATIBILITY.

* Fact collection sign_simps contains only simplification rules for
products being less / greater / equal to zero; combine with existing
collections algebra_simps or field_simps to obtain reasonable
simplification. INCOMPATIBILITY.

* Theory HOL-Library.Monad_Syntax: infix operation "bind" (>>=)
associates to the left now as is customary.


*** ML ***

* Theory construction may be forked internally, the operation
Theory.join_theory recovers a single result theory. See also the example
in theory "HOL-ex.Join_Theory".

* Antiquotation @{oracle_name} inlines a formally checked oracle name.


*** System ***

* The command-line tool "isabelle imports" has been discontinued: strict
checking of session directories enforces session-qualified theory names
in applications -- users are responsible to specify session ROOT entries
properly.

* Theory export via Isabelle/Scala has been reworked. The former "fact"
name space is now split into individual "thm" items: names are
potentially indexed, such as "foo" for singleton facts, or "bar(1)",
"bar(2)", "bar(3)" for multi-facts. Theorem dependencies are now
exported as well: this spans an overall dependency graph of internal
inferences; it might help to reconstruct the formal structure of theory
libraries. See also the module Export_Theory in Isabelle/Scala.


New in Isabelle2019 (June 2019)